# CamProV5

./: .gitignore  ANIMATION_ENGINE_FALLBACK.md  ANIMATION_ENGINE_IMPLEMENTATION.md  ANIMATION_MECHANICAL_COMPONENTS.md  ANIMATION_RENDERING_IMPROVEMENTS.md  ANIMATION_SCALING_AND_FALLBACK.md  ANIMATION_SCALING_FIX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLORATORY_TESTING_RESULTS.md  EXPLORATORY_TESTING_SUMMARY.md  FLOATING_PANELS_LAYOUT.md  GRADLE_BUILD_FIX_SUMMARY.md  GRADLE_WRAPPER_FIX.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_SETUP_AND_USAGE.md  KOTLIN_UI_IMPLEMENTATION.md  KOTLIN_UI_IMPLEMENTATION_PROGRESS.md  Kotlin_UI_rebuild.md  NATIVE_LIBRARY_INTEGRATION_GUIDE.md  PANEL_SCALING_FIXES_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  QApplication_Fix_Summary.md  README.md  README_CROSS_PLATFORM.md  README_exploratory_testing.md  SECURITY.md  SUPPORT.md  UI_LAYOUT_CHANGES_REPORT.md  WINDOW_RESIZING_IMPROVEMENTS.md  build.gradle.kts  check_pyqt5.py  compilation_report.md  gradle.properties  phase2_summary.md  phase3_summary.md  requirements.txt  (+11 more)
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: junie_files_to_issues.py
.junie/: guidelines.md
android/: build.gradle  gradle.properties  settings.gradle
campro/: main.py
camprofw/rust/fea-engine/: Cargo.toml
camprofw/rust/fea-engine/benches/: motion_law_benchmarks.rs
camprofw/rust/fea-engine/src/: error.rs  jni.rs  lib.rs  litvin.rs  logging.rs  motion_law.rs
camprofw/rust/fea-engine/tests/: litvin_tests.rs
cpp/: CMakeLists.txt
cpp/include/: CamAnimation.h
cpp/src/: CamAnimation.cpp  campro_animation_NativeLibrary.cpp
desktop/: build.gradle.kts
docs/: api_documentation.md  numerical_precision_requirements.md  performance_tuning.md  phase1_completion_report.md  phase2_completion_report.md  phase3_completion_report.md  user_guide.md
shared/: build.gradle.kts
tests/: test_backend_integration.py  test_cam_world_state.py  test_end_to_end.py  test_integration.py  test_parameter_validation.py  test_summary.md  test_ui_components.py
(+219 files in other folders)
