[package]
name = "fea-engine"
version = "0.1.0"
edition = "2021"
authors = ["CamPro Team"]
description = "High-performance FEA engine for cam profile simulation"

[dependencies]
# Parallel computation
rayon = "1.7"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Numerical computation
nalgebra = "0.32"
nalgebra-sparse = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time handling
chrono = "0.4.26"  # Stable version

# JNI support
jni = "0.21"
lazy_static = "1.4"

[dev-dependencies]
# Testing utilities
approx = "0.5"
criterion = "0.5"

[lib]
name = "fea_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bench]]
name = "motion_law_benchmarks"
harness = false

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"